--- a/index.css
+++ b/index.css
@@ -1,5 +1,40 @@
-h1 {
-    font-size: 72pts;
-    color: pink;
-    font-family: Arial; 
+body {
+    background: lightslategrey;
+    margin: 0;
+    padding: 0;
+}
+
+.title {
+    font-size: 80px;
+    color: lightseagreen;
+    font-family: Helvetica; 
+    text-align: center;
+    font-weight: bold;
+
+}
+h2.navigate {
+    font-size: 50px;
+    color: lightseagreen;
+    font-family: Helvetica;
+    text-align:center;
+}
+
+nav {
+    font-size: 20px;
+    color: lightseagreen;
+    background-color: white;
+    font-family: Helvetica;
+    text-align:center;
+}
+
+p {
+    display: inline-block;
+    font-size: 20px;
+    color: black;
+    font-family: Helvetica;
+    text-align: center;
+}
+
+img {
+    display: block;
 }
