--- a/index.css
+++ b/index.css
@@ -1,40 +1,70 @@
 body {
-    background: lightslategrey;
+    background-color: lightslategray;
     margin: 0;
-    padding: 0;
 }
 
-.title {
-    font-size: 80px;
+.grid-container {
+    display: grid;
+    grid-template: repeat(10, 100px) / 400px 1550px ;
+}
+
+h1 {
+    display: grid;
+    grid-area: 1 / 1 / span 2 / span 2;
+    justify-content: center;
+    align-content: center;
+    border: 3px solid white;
+    background-color: white;
     color: lightseagreen;
-    font-family: Helvetica; 
-    text-align: center;
-    font-weight: bold;
-
-}
-h2.navigate {
+    font-family: "Dosis";
     font-size: 50px;
-    color: lightseagreen;
-    font-family: Helvetica;
-    text-align:center;
+    text-transform: uppercase;
+    letter-spacing: 10px;
 }
 
 nav {
-    font-size: 20px;
-    color: lightseagreen;
-    background-color: white;
-    font-family: Helvetica;
-    text-align:center;
+    display: grid;
+    grid-area: 6 / 1 / span 5 / span 1;
+    grid-template-rows: repeat(4, 100px);
+    background-color: black;
 }
 
-p {
-    display: inline-block;
-    font-size: 20px;
-    color: black;
-    font-family: Helvetica;
+.banner {
+    display: grid;
+    grid-area: 3 / 1 / span 3 / span 2:
+    grid-template: 300px / 1950px;
+}
+.banner img{
+    display: grid;
+    grid-area: 3 / 1 / span 3 / span 2;
+    width: 1950px;
+}
+
+h2 {
+    display: grid;
+    color: white;
+    font-family: "Dosis";
+    grid-area: 3 / 1 / span 3 / span 2;
+    font-size: 50px;
+    position: absolute;
+    letter-spacing: 60px;
+    justify-content: center;
+    align-content: center;
+    text-transform: uppercase;
+}
+
+a {
+    color: lightseagreen;
+    font-family: "Dosis";
+    font-size: 30px;
     text-align: center;
 }
 
-img {
-    display: block;
+p {
+    color: white;
+    grid-area: 6 / 2 / span 3 / span 1;
+    font-family: "Dosis";
+    text-align: center;
+    font-size: 30px;
+    border: 3px solid white;
 }
