--- a/index.css
+++ b/index.css
@@ -1,2 +1,25 @@
-.main {
+body {
+  margin: 0;
+  padding: 0;
+  background-color: lightpink;
+}
+.nav-bar {
+  display: relative;
+  background-color: gray;
+  overflow: hidden;
+  height: 100px;
+  text-align: center;
+}
+
+.centered-links {
+  position: relative;
+  top: 60px;
+}
+
+.nav-bar a {
+  text-align: center;
+  color: white;
+  padding: 40px;
+  font-size: 10px;
+  font-family: Arial, Helvetica, sans-serif;
 }
