--- a/index.css
+++ b/index.css
@@ -23,3 +23,54 @@ body {
   font-size: 10px;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.main {
+  position: relative;
+  display: inline-grid;
+  width: 100%;
+  justify-content: center;
+}
+
+.block {
+  border: solid;
+  border-radius: 10px;
+  padding: 100px;
+  margin: 100px;
+  background-color: black;
+  display: flex;
+  width: 50vw;
+  height: 20vw;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.left {
+  order: 0;
+  text-align: left;
+  max-width: 100%;
+  max-height: 100%;
+  height: auto;
+  flex-wrap: wrap;
+}
+
+.right img {
+  order: 1;
+  text-align: right;
+  max-width: 100%;
+  max-height: 100%;
+  height: auto;
+}
+
+img.rounded {
+  border-radius: 10px;
+}
+
+h2 {
+  font-size: 4vw;
+  color: white;
+}
+
+p {
+  font-size: 1vw;
+  color: white;
+}
