--- a/index.css
+++ b/index.css
@@ -2,26 +2,37 @@ body {
   margin: 0;
   padding: 0;
   background-color: lightpink;
+  min-height: 100%;
 }
 .nav-bar {
   display: relative;
   background-color: gray;
   overflow: hidden;
-  height: 100px;
-  text-align: center;
+  height: 130px;
 }
 
 .centered-links {
+  margin-top: 50px;
+  padding: 5px;
   position: relative;
-  top: 60px;
+  text-align: center;
 }
 
 .nav-bar a {
   text-align: center;
   color: white;
-  padding: 40px;
-  font-size: 10px;
+  margin-left: 16px;
+  margin-right: 15px;
+  width: 30px;
+  padding: 50px;
+  font-size: 80%;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+
+
+.nav-bar a:focus {
+  background-color: pink;
 }
 
 .main {
@@ -32,7 +43,6 @@ body {
 }
 
 .block {
-  border: solid;
   border-radius: 10px;
   padding: 100px;
   margin: 100px;
@@ -44,6 +54,10 @@ body {
   align-items: center;
 }
 
+.block:hover {
+  background-color: grey;
+}
+
 .left {
   order: 0;
   text-align: left;
@@ -51,6 +65,11 @@ body {
   max-height: 100%;
   height: auto;
   flex-wrap: wrap;
+}
+
+.right p {
+  padding: 100px;
+  font-size: 1vw;
 }
 
 .right img {
@@ -73,4 +92,61 @@ h2 {
 p {
   font-size: 1vw;
   color: white;
+}
+
+.footer {
+  background-color: gray;
+  overflow: hidden;
+  height: 100px;
+  text-align: left;
+  display: flex;
+  justify-content: left;
+
+}
+
+.footer a {
+  text-align: center;
+  color: white;
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 20px;
+}
+
+.header h1 {
+  text-align: center;
+  font-size: 3vw;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.form {
+  width: 100%;
+  display: block;
+  text-align: center;
+  
+}
+
+form {
+  display: inline-block;
+  margin-bottom: 5%;
+  width: 60%;
+  border: solid;
+  border-radius: 10px;
+  height: 30vw;
+  text-align: center;
+  background-color: black;
+}
+
+form label {
+  font-size: 2vw;
+  color: gray;
+}
+
+
+input[type=text] {
+  width: 80%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border-radius: 10px;
+  color: pink
 }
